# timescoring

./: LICENSE  PerformanceMetricsLib.py  README.md  annotations.py  example.ipynb  pyproject.toml  requirements.txt  scoring.py  script_metricsDemo.py  test.py  visualization.py
.github/workflows/: python-app.yml  python-publish.yml
src/timescoring/: annotations.py  scoring.py  visualization.py
tests/: test.py
