[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timescoring"
version = "0.0.4"
authors = [
  { name="Jonathan Dan", email="jonathan.dan@epfl.ch" },
  { name="Una Pale", email="una.pale@epfl.ch" },
  { name="PEDESITE" }
]
description = "Library for measuring performance of time series classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7.1",
  "numpy>=1.24.3 ",
  "nptyping>=2.5.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/esl-epfl/epilepsy_performance_metrics"
"Bug Tracker" = "https://github.com/esl-epfl/epilepsy_performance_metrics/issues"